--- a/Review/delete_password.html
+++ b/Review/delete_password.html
@@ -12,7 +12,7 @@
 <body>
   <main class="container">
     <h1>글 삭제</h1>
-    <p>작성자만 글을 삭제할 수 있습니다. 글 작성시 입력한 비밀번호를 입력하여 글을 삭제할 수 있습니다.</p>
+    <p>작성자만 글을 삭제할 수 있습니다. 글 작성시 입력한 비밀번호를 입력하세요.</p>
     <form action="index.html">
       <input type="text" placeholder="비밀번호" />
       <input type="submit" value="확인" />
